--- a/icons/building/index.html
+++ b/icons/building/index.html
@@ -42,19 +42,53 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">building</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-building.svg">Download SVG<span class="rvt-sr-only">, building icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, building icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-building.svg">Download SVG<span class="rvt-sr-only">, building icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, building icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M15,14H14V1a1,1,0,0,0-1-1H3A1,1,0,0,0,2,1V14H1a1,1,0,0,0,0,2H15a1,1,0,0,0,0-2ZM9,14V13a1,1,0,0,0-2,0v1H4V2h8V14Z"/>
+    <rect x="5" y="3" width="2" height="2" rx="0.5" ry="0.5"/>
+    <rect x="5" y="6" width="2" height="2" rx="0.5" ry="0.5"/>
+    <rect x="5" y="9" width="2" height="2" rx="0.5" ry="0.5"/>
+    <rect x="9" y="3" width="2" height="2" rx="0.5" ry="0.5"/>
+    <rect x="9" y="6" width="2" height="2" rx="0.5" ry="0.5"/>
+    <rect x="9" y="9" width="2" height="2" rx="0.5" ry="0.5"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M15,14H14V1a1,1,0,0,0-1-1H3A1,1,0,0,0,2,1V14H1a1,1,0,0,0,0,2H15a1,1,0,0,0,0-2ZM9,14V13a1,1,0,0,0-2,0v1H4V2h8V14Z&quot;/&gt;
+    &lt;rect x=&quot;5&quot; y=&quot;3&quot; width=&quot;2&quot; height=&quot;2&quot; rx=&quot;0.5&quot; ry=&quot;0.5&quot;/&gt;
+    &lt;rect x=&quot;5&quot; y=&quot;6&quot; width=&quot;2&quot; height=&quot;2&quot; rx=&quot;0.5&quot; ry=&quot;0.5&quot;/&gt;
+    &lt;rect x=&quot;5&quot; y=&quot;9&quot; width=&quot;2&quot; height=&quot;2&quot; rx=&quot;0.5&quot; ry=&quot;0.5&quot;/&gt;
+    &lt;rect x=&quot;9&quot; y=&quot;3&quot; width=&quot;2&quot; height=&quot;2&quot; rx=&quot;0.5&quot; ry=&quot;0.5&quot;/&gt;
+    &lt;rect x=&quot;9&quot; y=&quot;6&quot; width=&quot;2&quot; height=&quot;2&quot; rx=&quot;0.5&quot; ry=&quot;0.5&quot;/&gt;
+    &lt;rect x=&quot;9&quot; y=&quot;9&quot; width=&quot;2&quot; height=&quot;2&quot; rx=&quot;0.5&quot; ry=&quot;0.5&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="building"></rvt-icon>
@@ -64,6 +98,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +115,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
