--- a/icons/expand/index.html
+++ b/icons/expand/index.html
@@ -42,19 +42,37 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">expand</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-expand.svg">Download SVG<span class="rvt-sr-only">, expand icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, expand icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-expand.svg">Download SVG<span class="rvt-sr-only">, expand icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, expand icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <path fill="currentColor" d="M14.86,7.09A1.08,1.08,0,0,0,16,5.94V1.14A1.08,1.08,0,0,0,14.86,0h-4.8A1.08,1.08,0,0,0,8.91,1.14a1.09,1.09,0,0,0,1.15,1.15h2L8,6.4,3.89,2.29H5.94A1.09,1.09,0,0,0,7.09,1.14,1.08,1.08,0,0,0,5.94,0H1.14A1.08,1.08,0,0,0,0,1.14v4.8A1.08,1.08,0,0,0,1.14,7.09,1.09,1.09,0,0,0,2.29,5.94V3.89L6.4,8,2.29,12.11v-2A1.09,1.09,0,0,0,1.14,8.91,1.08,1.08,0,0,0,0,10.06v4.8A1.08,1.08,0,0,0,1.14,16h4.8a1.15,1.15,0,1,0,0-2.29H3.89L8,9.6l4.11,4.11h-2a1.15,1.15,0,1,0,0,2.29h4.8A1.08,1.08,0,0,0,16,14.86v-4.8a1.15,1.15,0,1,0-2.29,0v2L9.6,8l4.11-4.11V5.94A1.16,1.16,0,0,0,14.86,7.09Z"/>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;path fill=&quot;currentColor&quot; d=&quot;M14.86,7.09A1.08,1.08,0,0,0,16,5.94V1.14A1.08,1.08,0,0,0,14.86,0h-4.8A1.08,1.08,0,0,0,8.91,1.14a1.09,1.09,0,0,0,1.15,1.15h2L8,6.4,3.89,2.29H5.94A1.09,1.09,0,0,0,7.09,1.14,1.08,1.08,0,0,0,5.94,0H1.14A1.08,1.08,0,0,0,0,1.14v4.8A1.08,1.08,0,0,0,1.14,7.09,1.09,1.09,0,0,0,2.29,5.94V3.89L6.4,8,2.29,12.11v-2A1.09,1.09,0,0,0,1.14,8.91,1.08,1.08,0,0,0,0,10.06v4.8A1.08,1.08,0,0,0,1.14,16h4.8a1.15,1.15,0,1,0,0-2.29H3.89L8,9.6l4.11,4.11h-2a1.15,1.15,0,1,0,0,2.29h4.8A1.08,1.08,0,0,0,16,14.86v-4.8a1.15,1.15,0,1,0-2.29,0v2L9.6,8l4.11-4.11V5.94A1.16,1.16,0,0,0,14.86,7.09Z&quot;/&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="expand"></rvt-icon>
@@ -64,6 +82,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +99,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
