--- a/icons/home/index.html
+++ b/icons/home/index.html
@@ -42,19 +42,37 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">home</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-home.svg">Download SVG<span class="rvt-sr-only">, home icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, home icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-home.svg">Download SVG<span class="rvt-sr-only">, home icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, home icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <path fill="currentColor" d="M15.6,6.4l-7-5.19a.76.76,0,0,0-.19-.12A1,1,0,0,0,8,1H8a1,1,0,0,0-.42.09.76.76,0,0,0-.19.12L.4,6.4a1,1,0,0,0-.4.8,1,1,0,0,0,.2.6A1,1,0,0,0,1.6,8L2,7.7V14a1,1,0,0,0,1,1H13a1,1,0,0,0,1-1V7.7l.4.3a1,1,0,0,0,.6.2,1,1,0,0,0,.6-1.8ZM12,13H9V9H7v4H4V6.22l4-3,4,3Z"/>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;path fill=&quot;currentColor&quot; d=&quot;M15.6,6.4l-7-5.19a.76.76,0,0,0-.19-.12A1,1,0,0,0,8,1H8a1,1,0,0,0-.42.09.76.76,0,0,0-.19.12L.4,6.4a1,1,0,0,0-.4.8,1,1,0,0,0,.2.6A1,1,0,0,0,1.6,8L2,7.7V14a1,1,0,0,0,1,1H13a1,1,0,0,0,1-1V7.7l.4.3a1,1,0,0,0,.6.2,1,1,0,0,0,.6-1.8ZM12,13H9V9H7v4H4V6.22l4-3,4,3Z&quot;/&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="home"></rvt-icon>
@@ -64,6 +82,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +99,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
