--- a/icons/lock-open/index.html
+++ b/icons/lock-open/index.html
@@ -42,19 +42,37 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">lock-open</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-lock-open.svg">Download SVG<span class="rvt-sr-only">, lock open icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, lock open icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-lock-open.svg">Download SVG<span class="rvt-sr-only">, lock open icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, lock open icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <path fill="currentColor" d="M12,0A4,4,0,0,0,8,4V6H1.25A1.25,1.25,0,0,0,0,7.25v7.5A1.25,1.25,0,0,0,1.25,16h9.5A1.25,1.25,0,0,0,12,14.75V7.25A1.25,1.25,0,0,0,10.75,6H10V4a2,2,0,0,1,4,0V7a1,1,0,0,0,2,0V4A4,4,0,0,0,12,0ZM10,14H2V8h8Z"/>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;path fill=&quot;currentColor&quot; d=&quot;M12,0A4,4,0,0,0,8,4V6H1.25A1.25,1.25,0,0,0,0,7.25v7.5A1.25,1.25,0,0,0,1.25,16h9.5A1.25,1.25,0,0,0,12,14.75V7.25A1.25,1.25,0,0,0,10.75,6H10V4a2,2,0,0,1,4,0V7a1,1,0,0,0,2,0V4A4,4,0,0,0,12,0ZM10,14H2V8h8Z&quot;/&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="lock-open"></rvt-icon>
@@ -64,6 +82,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +99,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
