--- a/icons/pin/index.html
+++ b/icons/pin/index.html
@@ -42,19 +42,37 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">pin</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-pin.svg">Download SVG<span class="rvt-sr-only">, pin icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, pin icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-pin.svg">Download SVG<span class="rvt-sr-only">, pin icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, pin icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <path fill="currentColor" d="M15.3,5.5l-4.6-4.6c-0.4-0.4-1-0.4-1.4,0L6.2,3.9L1.9,5.8C1.7,6,1.4,6.2,1.4,6.6c-0.1,0.3,0,0.7,0.3,0.9l2.8,2.8l-3.2,3.2 c-0.4,0.4-0.4,1,0,1.4c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l3.2-3.2l2.8,2.8c0.2,0.2,0.4,0.3,0.7,0.3c0.1,0,0.1,0,0.2,0 c0.3-0.1,0.6-0.3,0.7-0.6l1.9-4.2l3.1-3.1c0.2-0.2,0.3-0.4,0.3-0.7S15.4,5.7,15.3,5.5z M10.7,8.7c-0.1,0.1-0.2,0.2-0.2,0.3L9.1,12 L6.6,9.5l0,0l0,0L4.1,7l3.1-1.4c0.1,0,0.2-0.1,0.3-0.2L9.9,3l3.2,3.2L10.7,8.7z"/>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;path fill=&quot;currentColor&quot; d=&quot;M15.3,5.5l-4.6-4.6c-0.4-0.4-1-0.4-1.4,0L6.2,3.9L1.9,5.8C1.7,6,1.4,6.2,1.4,6.6c-0.1,0.3,0,0.7,0.3,0.9l2.8,2.8l-3.2,3.2 c-0.4,0.4-0.4,1,0,1.4c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l3.2-3.2l2.8,2.8c0.2,0.2,0.4,0.3,0.7,0.3c0.1,0,0.1,0,0.2,0 c0.3-0.1,0.6-0.3,0.7-0.6l1.9-4.2l3.1-3.1c0.2-0.2,0.3-0.4,0.3-0.7S15.4,5.7,15.3,5.5z M10.7,8.7c-0.1,0.1-0.2,0.2-0.2,0.3L9.1,12 L6.6,9.5l0,0l0,0L4.1,7l3.1-1.4c0.1,0,0.2-0.1,0.3-0.2L9.9,3l3.2,3.2L10.7,8.7z&quot;/&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="pin"></rvt-icon>
@@ -64,6 +82,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +99,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
