--- a/icons/star-solid/index.html
+++ b/icons/star-solid/index.html
@@ -42,19 +42,37 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">star-solid</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-star-solid.svg">Download SVG<span class="rvt-sr-only">, star solid icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, star solid icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-star-solid.svg">Download SVG<span class="rvt-sr-only">, star solid icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, star solid icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <path fill="currentColor" d="M15.61,5.53a1,1,0,0,0-.81-.68l-4.08-.6L8.9.56a1,1,0,0,0-1.8,0L5.28,4.25l-4.08.6a1,1,0,0,0-.56,1.7l3,2.88-.7,4.06a1,1,0,0,0,.4,1,1,1,0,0,0,1,.08L8,12.63l3.65,1.92a1.11,1.11,0,0,0,.46.11,1,1,0,0,0,.59-.19,1,1,0,0,0,.4-1l-.7-4.06,3-2.88A1,1,0,0,0,15.61,5.53Z"/>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;path fill=&quot;currentColor&quot; d=&quot;M15.61,5.53a1,1,0,0,0-.81-.68l-4.08-.6L8.9.56a1,1,0,0,0-1.8,0L5.28,4.25l-4.08.6a1,1,0,0,0-.56,1.7l3,2.88-.7,4.06a1,1,0,0,0,.4,1,1,1,0,0,0,1,.08L8,12.63l3.65,1.92a1.11,1.11,0,0,0,.46.11,1,1,0,0,0,.59-.19,1,1,0,0,0,.4-1l-.7-4.06,3-2.88A1,1,0,0,0,15.61,5.53Z&quot;/&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="star-solid"></rvt-icon>
@@ -64,6 +82,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +99,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
