--- a/icons/star/index.html
+++ b/icons/star/index.html
@@ -42,19 +42,37 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">star</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-star.svg">Download SVG<span class="rvt-sr-only">, star icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, star icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-star.svg">Download SVG<span class="rvt-sr-only">, star icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, star icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <path fill="currentColor" d="M12.11,14.66a1.11,1.11,0,0,1-.46-.11L8,12.63,4.35,14.55a1,1,0,0,1-1-.08,1,1,0,0,1-.4-1l.7-4.06-3-2.88a1,1,0,0,1,.56-1.7l4.08-.6L7.1.56a1,1,0,0,1,1.8,0l1.82,3.69,4.08.6a1,1,0,0,1,.56,1.7l-3,2.88.7,4.06a1,1,0,0,1-.4,1A1,1,0,0,1,12.11,14.66ZM8,10.5a1,1,0,0,1,.47.12l2.32,1.21-.45-2.58a1,1,0,0,1,.29-.88l1.88-1.83-2.6-.38a1,1,0,0,1-.75-.55L8,3.26,6.84,5.61a1,1,0,0,1-.75.55l-2.6.38L5.37,8.37a1,1,0,0,1,.29.88l-.45,2.58,2.32-1.21A1,1,0,0,1,8,10.5Z"/>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;path fill=&quot;currentColor&quot; d=&quot;M12.11,14.66a1.11,1.11,0,0,1-.46-.11L8,12.63,4.35,14.55a1,1,0,0,1-1-.08,1,1,0,0,1-.4-1l.7-4.06-3-2.88a1,1,0,0,1,.56-1.7l4.08-.6L7.1.56a1,1,0,0,1,1.8,0l1.82,3.69,4.08.6a1,1,0,0,1,.56,1.7l-3,2.88.7,4.06a1,1,0,0,1-.4,1A1,1,0,0,1,12.11,14.66ZM8,10.5a1,1,0,0,1,.47.12l2.32,1.21-.45-2.58a1,1,0,0,1,.29-.88l1.88-1.83-2.6-.38a1,1,0,0,1-.75-.55L8,3.26,6.84,5.61a1,1,0,0,1-.75.55l-2.6.38L5.37,8.37a1,1,0,0,1,.29.88l-.45,2.58,2.32-1.21A1,1,0,0,1,8,10.5Z&quot;/&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="star"></rvt-icon>
@@ -64,6 +82,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +99,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
