--- a/icons/user-add/index.html
+++ b/icons/user-add/index.html
@@ -42,19 +42,45 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">user-add</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-user-add.svg">Download SVG<span class="rvt-sr-only">, user add icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, user add icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-user-add.svg">Download SVG<span class="rvt-sr-only">, user add icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, user add icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M15,6H14V5a1,1,0,0,0-2,0V6H11a1,1,0,0,0,0,2h1V9a1,1,0,0,0,2,0V8h1a1,1,0,0,0,0-2Z"/>
+    <path d="M6,8A4,4,0,1,0,2,4,4,4,0,0,0,6,8ZM6,2A2,2,0,1,1,4,4,2,2,0,0,1,6,2Z"/>
+    <path d="M8,9H4a4,4,0,0,0-4,4v1.75A1.25,1.25,0,0,0,1.25,16h9.5A1.25,1.25,0,0,0,12,14.75V13A4,4,0,0,0,8,9Zm2,5H2V13a2,2,0,0,1,2-2H8a2,2,0,0,1,2,2Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M15,6H14V5a1,1,0,0,0-2,0V6H11a1,1,0,0,0,0,2h1V9a1,1,0,0,0,2,0V8h1a1,1,0,0,0,0-2Z&quot;/&gt;
+    &lt;path d=&quot;M6,8A4,4,0,1,0,2,4,4,4,0,0,0,6,8ZM6,2A2,2,0,1,1,4,4,2,2,0,0,1,6,2Z&quot;/&gt;
+    &lt;path d=&quot;M8,9H4a4,4,0,0,0-4,4v1.75A1.25,1.25,0,0,0,1.25,16h9.5A1.25,1.25,0,0,0,12,14.75V13A4,4,0,0,0,8,9Zm2,5H2V13a2,2,0,0,1,2-2H8a2,2,0,0,1,2,2Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="user-add"></rvt-icon>
@@ -64,6 +90,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +107,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
