--- a/icons/users-solid/index.html
+++ b/icons/users-solid/index.html
@@ -42,19 +42,47 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">users-solid</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-users-solid.svg">Download SVG<span class="rvt-sr-only">, users solid icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, users solid icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-users-solid.svg">Download SVG<span class="rvt-sr-only">, users solid icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, users solid icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <circle cx="11" cy="3" r="3"/>
+    <circle cx="5" cy="7" r="3"/>
+    <path d="M1,16H9a1,1,0,0,0,1-1V14a3,3,0,0,0-3-3H3a3,3,0,0,0-3,3v1A1,1,0,0,0,1,16Z"/>
+    <path d="M13,7H9.5a4.45,4.45,0,0,1-1,2.78,4.49,4.49,0,0,1,3,4.22H15a1,1,0,0,0,1-1V10A3,3,0,0,0,13,7Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;circle cx=&quot;11&quot; cy=&quot;3&quot; r=&quot;3&quot;/&gt;
+    &lt;circle cx=&quot;5&quot; cy=&quot;7&quot; r=&quot;3&quot;/&gt;
+    &lt;path d=&quot;M1,16H9a1,1,0,0,0,1-1V14a3,3,0,0,0-3-3H3a3,3,0,0,0-3,3v1A1,1,0,0,0,1,16Z&quot;/&gt;
+    &lt;path d=&quot;M13,7H9.5a4.45,4.45,0,0,1-1,2.78,4.49,4.49,0,0,1,3,4.22H15a1,1,0,0,0,1-1V10A3,3,0,0,0,13,7Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="users-solid"></rvt-icon>
@@ -64,6 +92,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +109,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
