--- a/icons/users/index.html
+++ b/icons/users/index.html
@@ -42,19 +42,47 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">users</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-users.svg">Download SVG<span class="rvt-sr-only">, users icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, users icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-users.svg">Download SVG<span class="rvt-sr-only">, users icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, users icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M5,5A1,1,0,1,1,4,6,1,1,0,0,1,5,5M5,3A3,3,0,1,0,8,6,3,3,0,0,0,5,3Z"/>
+    <path d="M8.8,16H1.2A1.2,1.2,0,0,1,0,14.8V13.4A3.4,3.4,0,0,1,3.4,10H6.6A3.4,3.4,0,0,1,10,13.4v1.4A1.2,1.2,0,0,1,8.8,16ZM2,14H8v-.6A1.4,1.4,0,0,0,6.6,12H3.4A1.4,1.4,0,0,0,2,13.4Z"/>
+    <path d="M11,2a1,1,0,1,1-1,1,1,1,0,0,1,1-1m0-2a3,3,0,1,0,3,3,3,3,0,0,0-3-3Z"/>
+    <path d="M14.8,13H12a1,1,0,0,1,0-2h2v-.6A1.4,1.4,0,0,0,12.6,9H10a1,1,0,0,1,0-2h2.6A3.4,3.4,0,0,1,16,10.4v1.4A1.2,1.2,0,0,1,14.8,13Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M5,5A1,1,0,1,1,4,6,1,1,0,0,1,5,5M5,3A3,3,0,1,0,8,6,3,3,0,0,0,5,3Z&quot;/&gt;
+    &lt;path d=&quot;M8.8,16H1.2A1.2,1.2,0,0,1,0,14.8V13.4A3.4,3.4,0,0,1,3.4,10H6.6A3.4,3.4,0,0,1,10,13.4v1.4A1.2,1.2,0,0,1,8.8,16ZM2,14H8v-.6A1.4,1.4,0,0,0,6.6,12H3.4A1.4,1.4,0,0,0,2,13.4Z&quot;/&gt;
+    &lt;path d=&quot;M11,2a1,1,0,1,1-1,1,1,1,0,0,1,1-1m0-2a3,3,0,1,0,3,3,3,3,0,0,0-3-3Z&quot;/&gt;
+    &lt;path d=&quot;M14.8,13H12a1,1,0,0,1,0-2h2v-.6A1.4,1.4,0,0,0,12.6,9H10a1,1,0,0,1,0-2h2.6A3.4,3.4,0,0,1,16,10.4v1.4A1.2,1.2,0,0,1,14.8,13Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="users"></rvt-icon>
@@ -64,6 +92,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +109,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
