--- a/icons/alarm/index.html
+++ b/icons/alarm/index.html
@@ -42,19 +42,47 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">alarm</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-alarm.svg">Download SVG<span class="rvt-sr-only">, alarm icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, alarm icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-alarm.svg">Download SVG<span class="rvt-sr-only">, alarm icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, alarm icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M8,2A7,7,0,0,0,2,12.67l-.94,1.89a1,1,0,0,0,1.79.89l.57-1.13a7,7,0,0,0,9.08,0l.57,1.13a1,1,0,0,0,1.79-.89L14,12.67A7,7,0,0,0,8,2ZM8,14a5,5,0,1,1,5-5A5,5,0,0,1,8,14Z"/>
+    <path d="M9.29,6.29l-2,2A1,1,0,0,0,7,9v3a1,1,0,0,0,2,0V9.41l1.71-1.71A1,1,0,0,0,9.29,6.29Z"/>
+    <path d="M1.71,3.71l2-2A1,1,0,0,0,2.29.29l-2,2A1,1,0,1,0,1.71,3.71Z"/>
+    <path d="M15.71,2.29l-2-2a1,1,0,0,0-1.41,1.41l2,2a1,1,0,0,0,1.41-1.41Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M8,2A7,7,0,0,0,2,12.67l-.94,1.89a1,1,0,0,0,1.79.89l.57-1.13a7,7,0,0,0,9.08,0l.57,1.13a1,1,0,0,0,1.79-.89L14,12.67A7,7,0,0,0,8,2ZM8,14a5,5,0,1,1,5-5A5,5,0,0,1,8,14Z&quot;/&gt;
+    &lt;path d=&quot;M9.29,6.29l-2,2A1,1,0,0,0,7,9v3a1,1,0,0,0,2,0V9.41l1.71-1.71A1,1,0,0,0,9.29,6.29Z&quot;/&gt;
+    &lt;path d=&quot;M1.71,3.71l2-2A1,1,0,0,0,2.29.29l-2,2A1,1,0,1,0,1.71,3.71Z&quot;/&gt;
+    &lt;path d=&quot;M15.71,2.29l-2-2a1,1,0,0,0-1.41,1.41l2,2a1,1,0,0,0,1.41-1.41Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="alarm"></rvt-icon>
@@ -64,6 +92,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +109,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
