--- a/icons/audio-off/index.html
+++ b/icons/audio-off/index.html
@@ -42,19 +42,43 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">audio-off</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-audio-off.svg">Download SVG<span class="rvt-sr-only">, audio off icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, audio off icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-audio-off.svg">Download SVG<span class="rvt-sr-only">, audio off icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, audio off icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M14,15a1,1,0,0,1-.71-.29l-12-12A1,1,0,0,1,2.71,1.29l12,12A1,1,0,0,1,14,15Z"/>
+    <path d="M12.4,2.5a1,1,0,1,0-.8,1.83,4,4,0,0,1,1.48,6.21L14.5,12A6,6,0,0,0,12.4,2.5ZM8,12,5.6,10.2A1,1,0,0,0,5,10H3V6L1.29,4.29A1,1,0,0,0,1,5v6a1,1,0,0,0,1,1H4.67L8.4,14.8A1,1,0,0,0,10,14V12.53l-2-2Zm2-6V2a1,1,0,0,0-1.6-.8l-2.67,2L7.16,4.63,8,4V5.47l3.65,3.65A2,2,0,0,0,10,6Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M14,15a1,1,0,0,1-.71-.29l-12-12A1,1,0,0,1,2.71,1.29l12,12A1,1,0,0,1,14,15Z&quot;/&gt;
+    &lt;path d=&quot;M12.4,2.5a1,1,0,1,0-.8,1.83,4,4,0,0,1,1.48,6.21L14.5,12A6,6,0,0,0,12.4,2.5ZM8,12,5.6,10.2A1,1,0,0,0,5,10H3V6L1.29,4.29A1,1,0,0,0,1,5v6a1,1,0,0,0,1,1H4.67L8.4,14.8A1,1,0,0,0,10,14V12.53l-2-2Zm2-6V2a1,1,0,0,0-1.6-.8l-2.67,2L7.16,4.63,8,4V5.47l3.65,3.65A2,2,0,0,0,10,6Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="audio-off"></rvt-icon>
@@ -64,6 +88,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +105,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
