--- a/icons/chat/index.html
+++ b/icons/chat/index.html
@@ -42,19 +42,47 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">chat</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-chat.svg">Download SVG<span class="rvt-sr-only">, chat icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, chat icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-chat.svg">Download SVG<span class="rvt-sr-only">, chat icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, chat icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M14.75,0H1.25A1.25,1.25,0,0,0,0,1.25v9.5A1.25,1.25,0,0,0,1.25,12H3v3a1,1,0,0,0,1.71.71L8.41,12h6.34A1.25,1.25,0,0,0,16,10.75V1.25A1.25,1.25,0,0,0,14.75,0ZM14,10H8a1,1,0,0,0-.71.29L5,12.59V11a1,1,0,0,0-1-1H2V2H14Z"/>
+    <circle cx="5" cy="6" r="1"/>
+    <circle cx="8" cy="6" r="1"/>
+    <circle cx="11" cy="6" r="1"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M14.75,0H1.25A1.25,1.25,0,0,0,0,1.25v9.5A1.25,1.25,0,0,0,1.25,12H3v3a1,1,0,0,0,1.71.71L8.41,12h6.34A1.25,1.25,0,0,0,16,10.75V1.25A1.25,1.25,0,0,0,14.75,0ZM14,10H8a1,1,0,0,0-.71.29L5,12.59V11a1,1,0,0,0-1-1H2V2H14Z&quot;/&gt;
+    &lt;circle cx=&quot;5&quot; cy=&quot;6&quot; r=&quot;1&quot;/&gt;
+    &lt;circle cx=&quot;8&quot; cy=&quot;6&quot; r=&quot;1&quot;/&gt;
+    &lt;circle cx=&quot;11&quot; cy=&quot;6&quot; r=&quot;1&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="chat"></rvt-icon>
@@ -64,6 +92,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +109,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
