--- a/icons/check-all/index.html
+++ b/icons/check-all/index.html
@@ -42,19 +42,47 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">check-all</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-check-all.svg">Download SVG<span class="rvt-sr-only">, check all icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, check all icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-check-all.svg">Download SVG<span class="rvt-sr-only">, check all icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, check all icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M15,5H12a1,1,0,0,1,0-2h3a1,1,0,0,1,0,2Z"/>
+    <path d="M15,9H10a1,1,0,0,1,0-2h5a1,1,0,0,1,0,2Z"/>
+    <path d="M15,13H8a1,1,0,0,1,0-2h7a1,1,0,0,1,0,2Z"/>
+    <path d="M3.5,13a1,1,0,0,1-.62-.22l-2.5-2a1,1,0,0,1-.16-1.4,1,1,0,0,1,1.4-.16l1.59,1.26,3.92-7a1,1,0,0,1,1.74,1l-4.5,8a1,1,0,0,1-.68.49Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M15,5H12a1,1,0,0,1,0-2h3a1,1,0,0,1,0,2Z&quot;/&gt;
+    &lt;path d=&quot;M15,9H10a1,1,0,0,1,0-2h5a1,1,0,0,1,0,2Z&quot;/&gt;
+    &lt;path d=&quot;M15,13H8a1,1,0,0,1,0-2h7a1,1,0,0,1,0,2Z&quot;/&gt;
+    &lt;path d=&quot;M3.5,13a1,1,0,0,1-.62-.22l-2.5-2a1,1,0,0,1-.16-1.4,1,1,0,0,1,1.4-.16l1.59,1.26,3.92-7a1,1,0,0,1,1.74,1l-4.5,8a1,1,0,0,1-.68.49Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="check-all"></rvt-icon>
@@ -64,6 +92,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +109,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
