--- a/icons/clipboard/index.html
+++ b/icons/clipboard/index.html
@@ -42,19 +42,45 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">clipboard</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-clipboard.svg">Download SVG<span class="rvt-sr-only">, clipboard icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, clipboard icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-clipboard.svg">Download SVG<span class="rvt-sr-only">, clipboard icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, clipboard icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M14,1H12a1,1,0,0,0-1-1H5A1,1,0,0,0,4,1H2A1,1,0,0,0,1,2V15a1,1,0,0,0,1,1H14a1,1,0,0,0,1-1V2A1,1,0,0,0,14,1ZM6,2h4V3H6Zm7,12H3V3H4V4A1,1,0,0,0,5,5h6a1,1,0,0,0,1-1V3h1Z"/>
+    <path d="M10,7H6A1,1,0,0,0,6,9h4a1,1,0,0,0,0-2Z"/>
+    <path d="M10,10H6a1,1,0,0,0,0,2h4a1,1,0,0,0,0-2Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M14,1H12a1,1,0,0,0-1-1H5A1,1,0,0,0,4,1H2A1,1,0,0,0,1,2V15a1,1,0,0,0,1,1H14a1,1,0,0,0,1-1V2A1,1,0,0,0,14,1ZM6,2h4V3H6Zm7,12H3V3H4V4A1,1,0,0,0,5,5h6a1,1,0,0,0,1-1V3h1Z&quot;/&gt;
+    &lt;path d=&quot;M10,7H6A1,1,0,0,0,6,9h4a1,1,0,0,0,0-2Z&quot;/&gt;
+    &lt;path d=&quot;M10,10H6a1,1,0,0,0,0,2h4a1,1,0,0,0,0-2Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="clipboard"></rvt-icon>
@@ -64,6 +90,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +107,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
