--- a/icons/close-circle-solid/index.html
+++ b/icons/close-circle-solid/index.html
@@ -42,19 +42,37 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">close-circle-solid</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-close-circle-solid.svg">Download SVG<span class="rvt-sr-only">, close circle solid icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, close circle solid icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-close-circle-solid.svg">Download SVG<span class="rvt-sr-only">, close circle solid icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, close circle solid icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <path fill="currentColor" d="M8,0a8,8,0,1,0,8,8A8,8,0,0,0,8,0Zm3.71,10.29a1,1,0,1,1-1.41,1.41L8,9.41,5.71,11.71a1,1,0,0,1-1.41-1.41L6.59,8,4.29,5.71A1,1,0,0,1,5.71,4.29L8,6.59l2.29-2.29a1,1,0,0,1,1.41,1.41L9.41,8Z"/>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;path fill=&quot;currentColor&quot; d=&quot;M8,0a8,8,0,1,0,8,8A8,8,0,0,0,8,0Zm3.71,10.29a1,1,0,1,1-1.41,1.41L8,9.41,5.71,11.71a1,1,0,0,1-1.41-1.41L6.59,8,4.29,5.71A1,1,0,0,1,5.71,4.29L8,6.59l2.29-2.29a1,1,0,0,1,1.41,1.41L9.41,8Z&quot;/&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="close-circle-solid"></rvt-icon>
@@ -64,6 +82,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +99,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
