--- a/icons/data/index.html
+++ b/icons/data/index.html
@@ -42,19 +42,47 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">data</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-data.svg">Download SVG<span class="rvt-sr-only">, data icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, data icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-data.svg">Download SVG<span class="rvt-sr-only">, data icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, data icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M8,5.32a17.93,17.93,0,0,0,7.32-1.6L16,3.26V1.89l-.57-.34A18.85,18.85,0,0,0,8,0,15.42,15.42,0,0,0,.56,1.55L0,1.89V3.38l.57.23A16.92,16.92,0,0,0,8,5.32Z"/>
+    <path d="M16,7.38V4.86h-.11C13,6.58,8.56,6.58,8,6.58A15.63,15.63,0,0,1,.11,4.86H0V7.38A21.15,21.15,0,0,0,8,8.86,21.12,21.12,0,0,0,16,7.38Z"/>
+    <path d="M8,13.66A15.52,15.52,0,0,1,.11,12H0v2.51A21.16,21.16,0,0,0,8,16a21.13,21.13,0,0,0,8-1.49V12h-.11C13,13.66,8.56,13.66,8,13.66Z"/>
+    <path d="M16,10.92V8.41h-.11C13,10.12,8.56,10.12,8,10.12A15.62,15.62,0,0,1,.11,8.41H0v2.51a21.16,21.16,0,0,0,8,1.49A21.13,21.13,0,0,0,16,10.92Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M8,5.32a17.93,17.93,0,0,0,7.32-1.6L16,3.26V1.89l-.57-.34A18.85,18.85,0,0,0,8,0,15.42,15.42,0,0,0,.56,1.55L0,1.89V3.38l.57.23A16.92,16.92,0,0,0,8,5.32Z&quot;/&gt;
+    &lt;path d=&quot;M16,7.38V4.86h-.11C13,6.58,8.56,6.58,8,6.58A15.63,15.63,0,0,1,.11,4.86H0V7.38A21.15,21.15,0,0,0,8,8.86,21.12,21.12,0,0,0,16,7.38Z&quot;/&gt;
+    &lt;path d=&quot;M8,13.66A15.52,15.52,0,0,1,.11,12H0v2.51A21.16,21.16,0,0,0,8,16a21.13,21.13,0,0,0,8-1.49V12h-.11C13,13.66,8.56,13.66,8,13.66Z&quot;/&gt;
+    &lt;path d=&quot;M16,10.92V8.41h-.11C13,10.12,8.56,10.12,8,10.12A15.62,15.62,0,0,1,.11,8.41H0v2.51a21.16,21.16,0,0,0,8,1.49A21.13,21.13,0,0,0,16,10.92Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="data"></rvt-icon>
@@ -64,6 +92,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +109,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
