--- a/icons/eye/index.html
+++ b/icons/eye/index.html
@@ -42,19 +42,43 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">eye</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-eye.svg">Download SVG<span class="rvt-sr-only">, eye icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, eye icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-eye.svg">Download SVG<span class="rvt-sr-only">, eye icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, eye icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M8,13A9.77,9.77,0,0,1,.25,8.68a1.21,1.21,0,0,1,0-1.36A9.77,9.77,0,0,1,8,3a9.59,9.59,0,0,1,7.74,4.31h0a1.24,1.24,0,0,1,0,1.38A9.59,9.59,0,0,1,8,13ZM2.24,8A7.7,7.7,0,0,0,8,11a7.64,7.64,0,0,0,5.77-3A7.64,7.64,0,0,0,8,5,7.7,7.7,0,0,0,2.24,8Zm11.85.43h0Z"/>
+    <circle cx="8" cy="8" r="2"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M8,13A9.77,9.77,0,0,1,.25,8.68a1.21,1.21,0,0,1,0-1.36A9.77,9.77,0,0,1,8,3a9.59,9.59,0,0,1,7.74,4.31h0a1.24,1.24,0,0,1,0,1.38A9.59,9.59,0,0,1,8,13ZM2.24,8A7.7,7.7,0,0,0,8,11a7.64,7.64,0,0,0,5.77-3A7.64,7.64,0,0,0,8,5,7.7,7.7,0,0,0,2.24,8Zm11.85.43h0Z&quot;/&gt;
+    &lt;circle cx=&quot;8&quot; cy=&quot;8&quot; r=&quot;2&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="eye"></rvt-icon>
@@ -64,6 +88,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +105,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
