--- a/icons/filter/index.html
+++ b/icons/filter/index.html
@@ -42,19 +42,37 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">filter</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-filter.svg">Download SVG<span class="rvt-sr-only">, filter icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, filter icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-filter.svg">Download SVG<span class="rvt-sr-only">, filter icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, filter icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <path fill="currentColor" d="M5.25,14.88A1.25,1.25,0,0,1,4,13.63V8.31L.24,2.76A1.25,1.25,0,0,1,1.38,1H14.58a1.25,1.25,0,0,1,1.09,1.86L15.55,3,11,8.37v2.49a1.24,1.24,0,0,1-.59,1.06L5.71,14.79A1.25,1.25,0,0,1,5.25,14.88ZM2.81,3,6,7.69v4.59l3-1.84V7.63L12.94,3Z"/>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;path fill=&quot;currentColor&quot; d=&quot;M5.25,14.88A1.25,1.25,0,0,1,4,13.63V8.31L.24,2.76A1.25,1.25,0,0,1,1.38,1H14.58a1.25,1.25,0,0,1,1.09,1.86L15.55,3,11,8.37v2.49a1.24,1.24,0,0,1-.59,1.06L5.71,14.79A1.25,1.25,0,0,1,5.25,14.88ZM2.81,3,6,7.69v4.59l3-1.84V7.63L12.94,3Z&quot;/&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="filter"></rvt-icon>
@@ -64,6 +82,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +99,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
