--- a/icons/gears/index.html
+++ b/icons/gears/index.html
@@ -42,19 +42,43 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">gears</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-gears.svg">Download SVG<span class="rvt-sr-only">, gears icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, gears icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-gears.svg">Download SVG<span class="rvt-sr-only">, gears icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, gears icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M2.71,8.74,2.83,8l.74-.1,1-.14.06-.14,0,0-.58-.81L4,6.64a2,2,0,0,1-.33-.46l0,0h0a2,2,0,1,1,3.5-1.78l.46.35.18-.07.17-1,.13-.74.74-.1.25,0,.52-.72A5.22,5.22,0,0,0,8.47,1l-1.12.84a4,4,0,0,0-.46-.23,4,4,0,0,0-.56-.18L6.1.05a5.22,5.22,0,0,0-1.54,0l-.2,1.38a4,4,0,0,0-1,.43L2.2,1.06a5.22,5.22,0,0,0-1.08,1.1L2,3.28a3.58,3.58,0,0,0-.41,1L.17,4.53a5.22,5.22,0,0,0,0,1.54l1.38.2a4,4,0,0,0,.43,1L1.18,8.43A5.22,5.22,0,0,0,2.28,9.5l.39-.29C2.68,9.06,2.68,8.9,2.71,8.74Z"/>
+    <path d="M14.16,11.1l1.61-.23a6.07,6.07,0,0,0,0-1.79l-1.6-.27a4.6,4.6,0,0,0-.47-1.19l1-1.3A6.07,6.07,0,0,0,13.46,5L12.13,6A4.16,4.16,0,0,0,11,5.47l-.23-1.61a6.07,6.07,0,0,0-1.79,0l-.27,1.6a4.6,4.6,0,0,0-1.19.47l-1.3-1A6.07,6.07,0,0,0,4.89,6.18L5.83,7.5a4.16,4.16,0,0,0-.51,1.18l-1.61.23a6.07,6.07,0,0,0,0,1.79l1.6.27a4.6,4.6,0,0,0,.47,1.19l-1,1.3A6.07,6.07,0,0,0,6,14.74l1.33-.94a4.16,4.16,0,0,0,1.18.51l.23,1.61a6.07,6.07,0,0,0,1.79,0l.27-1.6A4.6,4.6,0,0,0,12,13.87l1.3,1A6.07,6.07,0,0,0,14.6,13.6l-.94-1.33a4.15,4.15,0,0,0,.51-1.18Zm-2.32-.28a2.29,2.29,0,1,1-1.17-3A2.29,2.29,0,0,1,11.84,10.82Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M2.71,8.74,2.83,8l.74-.1,1-.14.06-.14,0,0-.58-.81L4,6.64a2,2,0,0,1-.33-.46l0,0h0a2,2,0,1,1,3.5-1.78l.46.35.18-.07.17-1,.13-.74.74-.1.25,0,.52-.72A5.22,5.22,0,0,0,8.47,1l-1.12.84a4,4,0,0,0-.46-.23,4,4,0,0,0-.56-.18L6.1.05a5.22,5.22,0,0,0-1.54,0l-.2,1.38a4,4,0,0,0-1,.43L2.2,1.06a5.22,5.22,0,0,0-1.08,1.1L2,3.28a3.58,3.58,0,0,0-.41,1L.17,4.53a5.22,5.22,0,0,0,0,1.54l1.38.2a4,4,0,0,0,.43,1L1.18,8.43A5.22,5.22,0,0,0,2.28,9.5l.39-.29C2.68,9.06,2.68,8.9,2.71,8.74Z&quot;/&gt;
+    &lt;path d=&quot;M14.16,11.1l1.61-.23a6.07,6.07,0,0,0,0-1.79l-1.6-.27a4.6,4.6,0,0,0-.47-1.19l1-1.3A6.07,6.07,0,0,0,13.46,5L12.13,6A4.16,4.16,0,0,0,11,5.47l-.23-1.61a6.07,6.07,0,0,0-1.79,0l-.27,1.6a4.6,4.6,0,0,0-1.19.47l-1.3-1A6.07,6.07,0,0,0,4.89,6.18L5.83,7.5a4.16,4.16,0,0,0-.51,1.18l-1.61.23a6.07,6.07,0,0,0,0,1.79l1.6.27a4.6,4.6,0,0,0,.47,1.19l-1,1.3A6.07,6.07,0,0,0,6,14.74l1.33-.94a4.16,4.16,0,0,0,1.18.51l.23,1.61a6.07,6.07,0,0,0,1.79,0l.27-1.6A4.6,4.6,0,0,0,12,13.87l1.3,1A6.07,6.07,0,0,0,14.6,13.6l-.94-1.33a4.15,4.15,0,0,0,.51-1.18Zm-2.32-.28a2.29,2.29,0,1,1-1.17-3A2.29,2.29,0,0,1,11.84,10.82Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="gears"></rvt-icon>
@@ -64,6 +88,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +105,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
