--- a/icons/heart/index.html
+++ b/icons/heart/index.html
@@ -42,19 +42,37 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">heart</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-heart.svg">Download SVG<span class="rvt-sr-only">, heart icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, heart icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-heart.svg">Download SVG<span class="rvt-sr-only">, heart icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, heart icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <path fill="currentColor" d="M8,14.52a1,1,0,0,1-.71-.3L1.38,8.33a4.29,4.29,0,0,1,0-6.07,4.3,4.3,0,0,1,6.07,0L8,2.79l.52-.53a4.3,4.3,0,0,1,6.07,0h0a4.23,4.23,0,0,1,1.26,3,4.21,4.21,0,0,1-1.26,3L8.68,14.22A1,1,0,0,1,8,14.52ZM4.42,3a2.34,2.34,0,0,0-1.63.67A2.31,2.31,0,0,0,2.12,5.3a2.29,2.29,0,0,0,.67,1.62L8,12.1l5.18-5.18a2.29,2.29,0,0,0,.67-1.62A2.29,2.29,0,0,0,9.92,3.67L8.68,4.91a1,1,0,0,1-1.41,0L6,3.67A2.33,2.33,0,0,0,4.42,3Z"/>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;path fill=&quot;currentColor&quot; d=&quot;M8,14.52a1,1,0,0,1-.71-.3L1.38,8.33a4.29,4.29,0,0,1,0-6.07,4.3,4.3,0,0,1,6.07,0L8,2.79l.52-.53a4.3,4.3,0,0,1,6.07,0h0a4.23,4.23,0,0,1,1.26,3,4.21,4.21,0,0,1-1.26,3L8.68,14.22A1,1,0,0,1,8,14.52ZM4.42,3a2.34,2.34,0,0,0-1.63.67A2.31,2.31,0,0,0,2.12,5.3a2.29,2.29,0,0,0,.67,1.62L8,12.1l5.18-5.18a2.29,2.29,0,0,0,.67-1.62A2.29,2.29,0,0,0,9.92,3.67L8.68,4.91a1,1,0,0,1-1.41,0L6,3.67A2.33,2.33,0,0,0,4.42,3Z&quot;/&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="heart"></rvt-icon>
@@ -64,6 +82,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +99,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
