--- a/icons/image/index.html
+++ b/icons/image/index.html
@@ -42,19 +42,43 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">image</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-image.svg">Download SVG<span class="rvt-sr-only">, image icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, image icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-image.svg">Download SVG<span class="rvt-sr-only">, image icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, image icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M14.29,0H1.71A1.76,1.76,0,0,0,0,1.71V14.29A1.76,1.76,0,0,0,1.71,16H14.29A1.76,1.76,0,0,0,16,14.29V1.71A1.76,1.76,0,0,0,14.29,0Zm-.58,2.29v8.34L9.94,6.29,8.11,8.34,4.91,4.46,2.29,8V2.29ZM2.29,11.89,5,8.23,8.11,12,9.94,9.83l3.43,3.88H2.29Z"/>
+    <circle cx="11.5" cy="4.5" r="1.5"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M14.29,0H1.71A1.76,1.76,0,0,0,0,1.71V14.29A1.76,1.76,0,0,0,1.71,16H14.29A1.76,1.76,0,0,0,16,14.29V1.71A1.76,1.76,0,0,0,14.29,0Zm-.58,2.29v8.34L9.94,6.29,8.11,8.34,4.91,4.46,2.29,8V2.29ZM2.29,11.89,5,8.23,8.11,12,9.94,9.83l3.43,3.88H2.29Z&quot;/&gt;
+    &lt;circle cx=&quot;11.5&quot; cy=&quot;4.5&quot; r=&quot;1.5&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="image"></rvt-icon>
@@ -64,6 +88,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +105,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
