--- a/icons/lightning-box/index.html
+++ b/icons/lightning-box/index.html
@@ -42,19 +42,43 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">lightning-box</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-lightning-box.svg">Download SVG<span class="rvt-sr-only">, lightning box icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, lightning box icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-lightning-box.svg">Download SVG<span class="rvt-sr-only">, lightning box icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, lightning box icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M12,15H4a2.9,2.9,0,0,1-3-3V4A2.9,2.9,0,0,1,4,1H5A.9.9,0,0,1,6,2,.9.9,0,0,1,5,3H4A.9.9,0,0,0,3,4v8a.9.9,0,0,0,1,1h8a.9.9,0,0,0,1-1V4a1,1,0,0,1,2,0v8A2.9,2.9,0,0,1,12,15Z"/>
+    <path d="M11.9,4.6A1,1,0,0,0,11,4H9.6l1.3-2.6A.9.9,0,0,0,10.5.2.9.9,0,0,0,9.2.4l-4,5a.9.9,0,0,0-.1,1A1,1,0,0,0,6,7H7.4L6.1,9.6a.9.9,0,0,0,.4,1.2L7,11a.9.9,0,0,0,.8-.4l4-5A.9.9,0,0,0,11.9,4.6Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M12,15H4a2.9,2.9,0,0,1-3-3V4A2.9,2.9,0,0,1,4,1H5A.9.9,0,0,1,6,2,.9.9,0,0,1,5,3H4A.9.9,0,0,0,3,4v8a.9.9,0,0,0,1,1h8a.9.9,0,0,0,1-1V4a1,1,0,0,1,2,0v8A2.9,2.9,0,0,1,12,15Z&quot;/&gt;
+    &lt;path d=&quot;M11.9,4.6A1,1,0,0,0,11,4H9.6l1.3-2.6A.9.9,0,0,0,10.5.2.9.9,0,0,0,9.2.4l-4,5a.9.9,0,0,0-.1,1A1,1,0,0,0,6,7H7.4L6.1,9.6a.9.9,0,0,0,.4,1.2L7,11a.9.9,0,0,0,.8-.4l4-5A.9.9,0,0,0,11.9,4.6Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="lightning-box"></rvt-icon>
@@ -64,6 +88,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +105,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
