--- a/icons/lightning/index.html
+++ b/icons/lightning/index.html
@@ -42,19 +42,37 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">lightning</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-lightning.svg">Download SVG<span class="rvt-sr-only">, lightning icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, lightning icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-lightning.svg">Download SVG<span class="rvt-sr-only">, lightning icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, lightning icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <path fill="currentColor" d="M12.9,6.6A1,1,0,0,0,12,6H8.6l2.3-4.6A1,1,0,0,0,10.5.1,1.1,1.1,0,0,0,9.2.4l-6,8a.9.9,0,0,0-.1,1A1,1,0,0,0,4,10H7.4L5.1,14.6a1,1,0,0,0,.4,1.3H6a.9.9,0,0,0,.8-.4l6-8A.9.9,0,0,0,12.9,6.6Z"/>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;path fill=&quot;currentColor&quot; d=&quot;M12.9,6.6A1,1,0,0,0,12,6H8.6l2.3-4.6A1,1,0,0,0,10.5.1,1.1,1.1,0,0,0,9.2.4l-6,8a.9.9,0,0,0-.1,1A1,1,0,0,0,4,10H7.4L5.1,14.6a1,1,0,0,0,.4,1.3H6a.9.9,0,0,0,.8-.4l6-8A.9.9,0,0,0,12.9,6.6Z&quot;/&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="lightning"></rvt-icon>
@@ -64,6 +82,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +99,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
