--- a/icons/link/index.html
+++ b/icons/link/index.html
@@ -42,19 +42,43 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">link</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-link.svg">Download SVG<span class="rvt-sr-only">, link icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, link icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-link.svg">Download SVG<span class="rvt-sr-only">, link icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, link icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M6.66,10.09a1.09,1.09,0,0,1-.82-.35L4.68,8.58a2.26,2.26,0,0,1,0-3.25L9.32.7A2.29,2.29,0,0,1,11,0a2.25,2.25,0,0,1,1.62.7l2.67,2.66a2.26,2.26,0,0,1,0,3.25l-.82.81A1.15,1.15,0,1,1,12.8,5.8L13.61,5,11,2.32,6.31,7,7.47,8.12a1.12,1.12,0,0,1,0,1.62A1.26,1.26,0,0,1,6.66,10.09Z"/>
+    <path d="M5,16a2.25,2.25,0,0,1-1.62-.7L.74,12.52A2,2,0,0,1,.05,10.9,2.28,2.28,0,0,1,.74,9.28l.81-.82a1.14,1.14,0,0,1,1.63,0,1.14,1.14,0,0,1,0,1.63l-.81.81,2.55,2.78L9.55,9,8.4,7.88a1.11,1.11,0,0,1,0-1.62,1.12,1.12,0,0,1,1.62,0l1.16,1.16A2.28,2.28,0,0,1,11.87,9a2.32,2.32,0,0,1-.69,1.63L6.42,15.42A1.72,1.72,0,0,1,5,16Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M6.66,10.09a1.09,1.09,0,0,1-.82-.35L4.68,8.58a2.26,2.26,0,0,1,0-3.25L9.32.7A2.29,2.29,0,0,1,11,0a2.25,2.25,0,0,1,1.62.7l2.67,2.66a2.26,2.26,0,0,1,0,3.25l-.82.81A1.15,1.15,0,1,1,12.8,5.8L13.61,5,11,2.32,6.31,7,7.47,8.12a1.12,1.12,0,0,1,0,1.62A1.26,1.26,0,0,1,6.66,10.09Z&quot;/&gt;
+    &lt;path d=&quot;M5,16a2.25,2.25,0,0,1-1.62-.7L.74,12.52A2,2,0,0,1,.05,10.9,2.28,2.28,0,0,1,.74,9.28l.81-.82a1.14,1.14,0,0,1,1.63,0,1.14,1.14,0,0,1,0,1.63l-.81.81,2.55,2.78L9.55,9,8.4,7.88a1.11,1.11,0,0,1,0-1.62,1.12,1.12,0,0,1,1.62,0l1.16,1.16A2.28,2.28,0,0,1,11.87,9a2.32,2.32,0,0,1-.69,1.63L6.42,15.42A1.72,1.72,0,0,1,5,16Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="link"></rvt-icon>
@@ -64,6 +88,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +105,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
