--- a/icons/list/index.html
+++ b/icons/list/index.html
@@ -42,19 +42,51 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">list</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-list.svg">Download SVG<span class="rvt-sr-only">, list icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, list icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-list.svg">Download SVG<span class="rvt-sr-only">, list icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, list icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M13,4H6A1,1,0,0,1,6,2h7a1,1,0,0,1,0,2Z"/>
+    <path d="M13,9H6A1,1,0,0,1,6,7h7a1,1,0,0,1,0,2Z"/>
+    <path d="M13,14H6a1,1,0,0,1,0-2h7a1,1,0,0,1,0,2Z"/>
+    <circle cx="3" cy="3" r="1"/>
+    <circle cx="3" cy="8" r="1"/>
+    <circle cx="3" cy="13" r="1"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M13,4H6A1,1,0,0,1,6,2h7a1,1,0,0,1,0,2Z&quot;/&gt;
+    &lt;path d=&quot;M13,9H6A1,1,0,0,1,6,7h7a1,1,0,0,1,0,2Z&quot;/&gt;
+    &lt;path d=&quot;M13,14H6a1,1,0,0,1,0-2h7a1,1,0,0,1,0,2Z&quot;/&gt;
+    &lt;circle cx=&quot;3&quot; cy=&quot;3&quot; r=&quot;1&quot;/&gt;
+    &lt;circle cx=&quot;3&quot; cy=&quot;8&quot; r=&quot;1&quot;/&gt;
+    &lt;circle cx=&quot;3&quot; cy=&quot;13&quot; r=&quot;1&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="list"></rvt-icon>
@@ -64,6 +96,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +113,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
