--- a/icons/map-pin/index.html
+++ b/icons/map-pin/index.html
@@ -42,19 +42,43 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">map-pin</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-map-pin.svg">Download SVG<span class="rvt-sr-only">, map pin icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, map pin icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-map-pin.svg">Download SVG<span class="rvt-sr-only">, map pin icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, map pin icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M8,0A7,7,0,0,0,1,7c0,3.69,5.73,8.28,6.38,8.79a1,1,0,0,0,1.23,0C9.27,15.28,15,10.69,15,7A7,7,0,0,0,8,0ZM8,13.71C5.85,11.9,3,8.87,3,7A5,5,0,0,1,13,7C13,8.87,10.15,11.9,8,13.71Z"/>
+    <path d="M8,10a3,3,0,1,1,3-3A3,3,0,0,1,8,10ZM8,6A1,1,0,1,0,9,7,1,1,0,0,0,8,6Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M8,0A7,7,0,0,0,1,7c0,3.69,5.73,8.28,6.38,8.79a1,1,0,0,0,1.23,0C9.27,15.28,15,10.69,15,7A7,7,0,0,0,8,0ZM8,13.71C5.85,11.9,3,8.87,3,7A5,5,0,0,1,13,7C13,8.87,10.15,11.9,8,13.71Z&quot;/&gt;
+    &lt;path d=&quot;M8,10a3,3,0,1,1,3-3A3,3,0,0,1,8,10ZM8,6A1,1,0,1,0,9,7,1,1,0,0,0,8,6Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="map-pin"></rvt-icon>
@@ -64,6 +88,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +105,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
