--- a/icons/megaphone/index.html
+++ b/icons/megaphone/index.html
@@ -42,19 +42,37 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">megaphone</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-megaphone.svg">Download SVG<span class="rvt-sr-only">, megaphone icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, megaphone icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-megaphone.svg">Download SVG<span class="rvt-sr-only">, megaphone icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, megaphone icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <path fill="currentColor" d="M15,6.09V1A1,1,0,0,0,13.4.2L9.67,3H4A4,4,0,0,0,0,7a3.92,3.92,0,0,0,3.41,3.94l-1.3,2.61a1,1,0,0,0,1.78.9L5.62,11H9.67l3.73,2.8a1,1,0,0,0,1,.09A1,1,0,0,0,15,13V8.91a1.49,1.49,0,0,0,0-2.82ZM4,9A1.94,1.94,0,0,1,2,7,1.94,1.94,0,0,1,4,5Zm9,2L10.33,9H6V5h4.33L13,3Z"/>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;path fill=&quot;currentColor&quot; d=&quot;M15,6.09V1A1,1,0,0,0,13.4.2L9.67,3H4A4,4,0,0,0,0,7a3.92,3.92,0,0,0,3.41,3.94l-1.3,2.61a1,1,0,0,0,1.78.9L5.62,11H9.67l3.73,2.8a1,1,0,0,0,1,.09A1,1,0,0,0,15,13V8.91a1.49,1.49,0,0,0,0-2.82ZM4,9A1.94,1.94,0,0,1,2,7,1.94,1.94,0,0,1,4,5Zm9,2L10.33,9H6V5h4.33L13,3Z&quot;/&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="megaphone"></rvt-icon>
@@ -64,6 +82,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +99,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
