--- a/icons/note/index.html
+++ b/icons/note/index.html
@@ -42,19 +42,47 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">note</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-note.svg">Download SVG<span class="rvt-sr-only">, note icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, note icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-note.svg">Download SVG<span class="rvt-sr-only">, note icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, note icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M13,16H3a.9.9,0,0,1-1-1V1A.9.9,0,0,1,3,0h8a.9.9,0,0,1,.7.3l2,2A.9.9,0,0,1,14,3V15A.9.9,0,0,1,13,16ZM4,14h8V3.4L10.6,2H4Z"/>
+    <path d="M10,6H6A.9.9,0,0,1,5,5,.9.9,0,0,1,6,4h4a.9.9,0,0,1,1,1A.9.9,0,0,1,10,6Z"/>
+    <path d="M10,9H6A.9.9,0,0,1,5,8,.9.9,0,0,1,6,7h4a.9.9,0,0,1,1,1A.9.9,0,0,1,10,9Z"/>
+    <path d="M8,12H6a.9.9,0,0,1-1-1,.9.9,0,0,1,1-1H8a.9.9,0,0,1,1,1A.9.9,0,0,1,8,12Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M13,16H3a.9.9,0,0,1-1-1V1A.9.9,0,0,1,3,0h8a.9.9,0,0,1,.7.3l2,2A.9.9,0,0,1,14,3V15A.9.9,0,0,1,13,16ZM4,14h8V3.4L10.6,2H4Z&quot;/&gt;
+    &lt;path d=&quot;M10,6H6A.9.9,0,0,1,5,5,.9.9,0,0,1,6,4h4a.9.9,0,0,1,1,1A.9.9,0,0,1,10,6Z&quot;/&gt;
+    &lt;path d=&quot;M10,9H6A.9.9,0,0,1,5,8,.9.9,0,0,1,6,7h4a.9.9,0,0,1,1,1A.9.9,0,0,1,10,9Z&quot;/&gt;
+    &lt;path d=&quot;M8,12H6a.9.9,0,0,1-1-1,.9.9,0,0,1,1-1H8a.9.9,0,0,1,1,1A.9.9,0,0,1,8,12Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="note"></rvt-icon>
@@ -64,6 +92,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +109,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
