--- a/icons/ordered-list/index.html
+++ b/icons/ordered-list/index.html
@@ -42,19 +42,47 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">ordered-list</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-ordered-list.svg">Download SVG<span class="rvt-sr-only">, ordered list icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, ordered list icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-ordered-list.svg">Download SVG<span class="rvt-sr-only">, ordered list icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, ordered list icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M14.66,5H7.44a1.13,1.13,0,0,1-1.2-1.2,1.14,1.14,0,0,1,1.2-1.21h7.34A1.15,1.15,0,0,1,16,3.77,1.24,1.24,0,0,1,14.66,5Z"/>
+    <path d="M0,7V5.93H1.07V2.2A3.5,3.5,0,0,1,0,2.44V1.36A1.68,1.68,0,0,0,1.07,1h1.2V5.93h1V7Z"/>
+    <path d="M14.66,12.79H7.44a1.13,1.13,0,0,1-1.2-1.2,1.14,1.14,0,0,1,1.2-1.21h7.34A1.14,1.14,0,0,1,16,11.59,1.24,1.24,0,0,1,14.66,12.79Z"/>
+    <path d="M0,14.71v-.12c0-.84.24-1.68,1.8-2.76,1-.6,1.32-.85,1.32-1.45a.69.69,0,0,0-.72-.72H2.27A1.48,1.48,0,0,0,1,10.5L0,9.9A2.57,2.57,0,0,1,2.27,8.58c1.32,0,2.05.6,2.05,1.68,0,.72-.24,1.21-1.33,1.93-.84.6-1.44,1-1.44,1.32H4.44v1.08Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M14.66,5H7.44a1.13,1.13,0,0,1-1.2-1.2,1.14,1.14,0,0,1,1.2-1.21h7.34A1.15,1.15,0,0,1,16,3.77,1.24,1.24,0,0,1,14.66,5Z&quot;/&gt;
+    &lt;path d=&quot;M0,7V5.93H1.07V2.2A3.5,3.5,0,0,1,0,2.44V1.36A1.68,1.68,0,0,0,1.07,1h1.2V5.93h1V7Z&quot;/&gt;
+    &lt;path d=&quot;M14.66,12.79H7.44a1.13,1.13,0,0,1-1.2-1.2,1.14,1.14,0,0,1,1.2-1.21h7.34A1.14,1.14,0,0,1,16,11.59,1.24,1.24,0,0,1,14.66,12.79Z&quot;/&gt;
+    &lt;path d=&quot;M0,14.71v-.12c0-.84.24-1.68,1.8-2.76,1-.6,1.32-.85,1.32-1.45a.69.69,0,0,0-.72-.72H2.27A1.48,1.48,0,0,0,1,10.5L0,9.9A2.57,2.57,0,0,1,2.27,8.58c1.32,0,2.05.6,2.05,1.68,0,.72-.24,1.21-1.33,1.93-.84.6-1.44,1-1.44,1.32H4.44v1.08Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="ordered-list"></rvt-icon>
@@ -64,6 +92,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +109,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
