--- a/icons/question-mark/index.html
+++ b/icons/question-mark/index.html
@@ -42,19 +42,45 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">question-mark</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-question-mark.svg">Download SVG<span class="rvt-sr-only">, question mark icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, question mark icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-question-mark.svg">Download SVG<span class="rvt-sr-only">, question mark icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, question mark icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M8,16a8,8,0,1,1,8-8A8,8,0,0,1,8,16ZM8,2a6,6,0,1,0,6,6A6,6,0,0,0,8,2Z"/>
+    <path d="M8,10A1,1,0,0,1,7,9V8.25A1.25,1.25,0,0,1,8.25,7h.64A1.08,1.08,0,0,0,10,6.18,1,1,0,0,0,9,5H7A1,1,0,0,1,7,3H9a3,3,0,0,1,3,3.5A3.08,3.08,0,0,1,9,9H9A1,1,0,0,1,8,10Z"/>
+    <path d="M8,13a1,1,0,0,1-.38-.08,1,1,0,0,1-.33-.21A1,1,0,0,1,7,12a1,1,0,0,1,.08-.38,1,1,0,0,1,.21-.33,1,1,0,0,1,.9-.27.62.62,0,0,1,.19.06.74.74,0,0,1,.18.09l.15.12a.93.93,0,0,1,.21.33,1,1,0,0,1-.21,1.09,1.16,1.16,0,0,1-.33.21A1,1,0,0,1,8,13Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M8,16a8,8,0,1,1,8-8A8,8,0,0,1,8,16ZM8,2a6,6,0,1,0,6,6A6,6,0,0,0,8,2Z&quot;/&gt;
+    &lt;path d=&quot;M8,10A1,1,0,0,1,7,9V8.25A1.25,1.25,0,0,1,8.25,7h.64A1.08,1.08,0,0,0,10,6.18,1,1,0,0,0,9,5H7A1,1,0,0,1,7,3H9a3,3,0,0,1,3,3.5A3.08,3.08,0,0,1,9,9H9A1,1,0,0,1,8,10Z&quot;/&gt;
+    &lt;path d=&quot;M8,13a1,1,0,0,1-.38-.08,1,1,0,0,1-.33-.21A1,1,0,0,1,7,12a1,1,0,0,1,.08-.38,1,1,0,0,1,.21-.33,1,1,0,0,1,.9-.27.62.62,0,0,1,.19.06.74.74,0,0,1,.18.09l.15.12a.93.93,0,0,1,.21.33,1,1,0,0,1-.21,1.09,1.16,1.16,0,0,1-.33.21A1,1,0,0,1,8,13Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="question-mark"></rvt-icon>
@@ -64,6 +90,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +107,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
