--- a/icons/rss/index.html
+++ b/icons/rss/index.html
@@ -42,19 +42,45 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">rss</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-rss.svg">Download SVG<span class="rvt-sr-only">, rss icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, rss icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-rss.svg">Download SVG<span class="rvt-sr-only">, rss icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, rss icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <circle cx="2.5" cy="13.5" r="2.5"/>
+    <path d="M10,16a1,1,0,0,1-1-.95,8.47,8.47,0,0,0-8-8,1,1,0,0,1,.1-2A10.47,10.47,0,0,1,11,14.95,1,1,0,0,1,10,16Z"/>
+    <path d="M15,16a1,1,0,0,1-1-1A13.53,13.53,0,0,0,1,2,1,1,0,0,1,1,0,15.53,15.53,0,0,1,16,15a1,1,0,0,1-1,1Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;circle cx=&quot;2.5&quot; cy=&quot;13.5&quot; r=&quot;2.5&quot;/&gt;
+    &lt;path d=&quot;M10,16a1,1,0,0,1-1-.95,8.47,8.47,0,0,0-8-8,1,1,0,0,1,.1-2A10.47,10.47,0,0,1,11,14.95,1,1,0,0,1,10,16Z&quot;/&gt;
+    &lt;path d=&quot;M15,16a1,1,0,0,1-1-1A13.53,13.53,0,0,0,1,2,1,1,0,0,1,1,0,15.53,15.53,0,0,1,16,15a1,1,0,0,1-1,1Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="rss"></rvt-icon>
@@ -64,6 +90,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +107,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
