--- a/icons/sync/index.html
+++ b/icons/sync/index.html
@@ -42,19 +42,43 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">sync</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-sync.svg">Download SVG<span class="rvt-sr-only">, sync icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, sync icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-sync.svg">Download SVG<span class="rvt-sr-only">, sync icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, sync icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M13.93,1a1,1,0,0,0-1,1V3A7,7,0,0,0,1.41,5.67,1,1,0,0,0,2,6.94a1,1,0,0,0,1.28-.61A5,5,0,0,1,12,5H10a1,1,0,0,0,0,2h3.52a1,1,0,0,0,.17,0l.15,0h.13a1,1,0,0,0,1-1V2A1,1,0,0,0,13.93,1Z"/>
+    <path d="M14,9.06a1,1,0,0,0-1.28.61A5,5,0,0,1,4,11H6.14a1,1,0,0,0,0-2H2.51a.88.88,0,0,0-.28,0H2.17a.7.7,0,0,0-.14,0H2a1,1,0,0,0-.84,1v4a1,1,0,0,0,2,0v-.92a7,7,0,0,0,11.42-2.73A1,1,0,0,0,14,9.06Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M13.93,1a1,1,0,0,0-1,1V3A7,7,0,0,0,1.41,5.67,1,1,0,0,0,2,6.94a1,1,0,0,0,1.28-.61A5,5,0,0,1,12,5H10a1,1,0,0,0,0,2h3.52a1,1,0,0,0,.17,0l.15,0h.13a1,1,0,0,0,1-1V2A1,1,0,0,0,13.93,1Z&quot;/&gt;
+    &lt;path d=&quot;M14,9.06a1,1,0,0,0-1.28.61A5,5,0,0,1,4,11H6.14a1,1,0,0,0,0-2H2.51a.88.88,0,0,0-.28,0H2.17a.7.7,0,0,0-.14,0H2a1,1,0,0,0-.84,1v4a1,1,0,0,0,2,0v-.92a7,7,0,0,0,11.42-2.73A1,1,0,0,0,14,9.06Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="sync"></rvt-icon>
@@ -64,6 +88,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +105,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
