--- a/icons/transfer-alternate/index.html
+++ b/icons/transfer-alternate/index.html
@@ -42,19 +42,43 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">transfer-alternate</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-transfer-alternate.svg">Download SVG<span class="rvt-sr-only">, transfer alternate icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, transfer alternate icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-transfer-alternate.svg">Download SVG<span class="rvt-sr-only">, transfer alternate icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, transfer alternate icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M6.29,10.29,5,11.59V2A1,1,0,0,0,3,2v9.59L1.71,10.29A1,1,0,0,0,.29,11.71l3,3a1,1,0,0,0,1.42,0l3-3a1,1,0,0,0-1.41-1.41Z"/>
+    <path d="M15.71,4.29l-3-3a1,1,0,0,0-1.42,0l-3,3A1,1,0,1,0,9.71,5.71L11,4.41V14a1,1,0,0,0,2,0V4.41l1.29,1.29a1,1,0,0,0,1.41-1.41Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M6.29,10.29,5,11.59V2A1,1,0,0,0,3,2v9.59L1.71,10.29A1,1,0,0,0,.29,11.71l3,3a1,1,0,0,0,1.42,0l3-3a1,1,0,0,0-1.41-1.41Z&quot;/&gt;
+    &lt;path d=&quot;M15.71,4.29l-3-3a1,1,0,0,0-1.42,0l-3,3A1,1,0,1,0,9.71,5.71L11,4.41V14a1,1,0,0,0,2,0V4.41l1.29,1.29a1,1,0,0,0,1.41-1.41Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="transfer-alternate"></rvt-icon>
@@ -64,6 +88,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +105,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
