--- a/icons/transfer/index.html
+++ b/icons/transfer/index.html
@@ -42,19 +42,43 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">transfer</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-transfer.svg">Download SVG<span class="rvt-sr-only">, transfer icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, transfer icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-transfer.svg">Download SVG<span class="rvt-sr-only">, transfer icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, transfer icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M2,5h9.59L10.29,6.29a1,1,0,1,0,1.41,1.41l3-3a1,1,0,0,0,0-1.42l-3-3a1,1,0,0,0-1.41,1.41L11.59,3H2A1,1,0,0,0,2,5Z"/>
+    <path d="M14,11H4.41L5.71,9.71A1,1,0,0,0,4.29,8.29l-3,3a1,1,0,0,0,0,1.42l3,3a1,1,0,0,0,1.41-1.41L4.41,13H14a1,1,0,0,0,0-2Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M2,5h9.59L10.29,6.29a1,1,0,1,0,1.41,1.41l3-3a1,1,0,0,0,0-1.42l-3-3a1,1,0,0,0-1.41,1.41L11.59,3H2A1,1,0,0,0,2,5Z&quot;/&gt;
+    &lt;path d=&quot;M14,11H4.41L5.71,9.71A1,1,0,0,0,4.29,8.29l-3,3a1,1,0,0,0,0,1.42l3,3a1,1,0,0,0,1.41-1.41L4.41,13H14a1,1,0,0,0,0-2Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="transfer"></rvt-icon>
@@ -64,6 +88,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +105,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
