--- a/icons/trash/index.html
+++ b/icons/trash/index.html
@@ -42,19 +42,45 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">trash</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-trash.svg">Download SVG<span class="rvt-sr-only">, trash icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, trash icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-trash.svg">Download SVG<span class="rvt-sr-only">, trash icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, trash icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M14,4H11V2a1,1,0,0,0-1-1H6A1,1,0,0,0,5,2V4H2A1,1,0,0,0,2,6H3v8a1,1,0,0,0,1,1h8a1,1,0,0,0,1-1V6h1a1,1,0,0,0,0-2ZM7,3H9V4H7Zm4,10H5V6h6Z"/>
+    <path d="M8.33,8v3a1,1,0,1,0,2,0V8a1,1,0,1,0-2,0Z"/>
+    <path d="M6.67,7a1,1,0,0,0-1,1v3a1,1,0,0,0,2,0V8A1,1,0,0,0,6.67,7Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M14,4H11V2a1,1,0,0,0-1-1H6A1,1,0,0,0,5,2V4H2A1,1,0,0,0,2,6H3v8a1,1,0,0,0,1,1h8a1,1,0,0,0,1-1V6h1a1,1,0,0,0,0-2ZM7,3H9V4H7Zm4,10H5V6h6Z&quot;/&gt;
+    &lt;path d=&quot;M8.33,8v3a1,1,0,1,0,2,0V8a1,1,0,1,0-2,0Z&quot;/&gt;
+    &lt;path d=&quot;M6.67,7a1,1,0,0,0-1,1v3a1,1,0,0,0,2,0V8A1,1,0,0,0,6.67,7Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="trash"></rvt-icon>
@@ -64,6 +90,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +107,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
