--- a/icons/upload/index.html
+++ b/icons/upload/index.html
@@ -42,19 +42,43 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">upload</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-upload.svg">Download SVG<span class="rvt-sr-only">, upload icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, upload icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-upload.svg">Download SVG<span class="rvt-sr-only">, upload icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, upload icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <path d="M14,15H2A1.25,1.25,0,0,1,.75,13.75V12a1,1,0,0,1,2,0v1h10.5V12a1,1,0,0,1,2,0v1.75A1.25,1.25,0,0,1,14,15Z"/>
+    <path d="M12.71,4.29l-4-4a1,1,0,0,0-1.42,0l-4,4a1,1,0,0,0,0,1.42,1,1,0,0,0,1.42,0L7,3.41V10a1,1,0,0,0,2,0V3.41l2.29,2.3a1,1,0,0,0,1.42,0A1,1,0,0,0,12.71,4.29Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;path d=&quot;M14,15H2A1.25,1.25,0,0,1,.75,13.75V12a1,1,0,0,1,2,0v1h10.5V12a1,1,0,0,1,2,0v1.75A1.25,1.25,0,0,1,14,15Z&quot;/&gt;
+    &lt;path d=&quot;M12.71,4.29l-4-4a1,1,0,0,0-1.42,0l-4,4a1,1,0,0,0,0,1.42,1,1,0,0,0,1.42,0L7,3.41V10a1,1,0,0,0,2,0V3.41l2.29,2.3a1,1,0,0,0,1.42,0A1,1,0,0,0,12.71,4.29Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="upload"></rvt-icon>
@@ -64,6 +88,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +105,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
