--- a/icons/users-group-solid/index.html
+++ b/icons/users-group-solid/index.html
@@ -42,19 +42,51 @@
       
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">users-group-solid</h1>
 
-<div class="rvt-button-group rvt-m-top-sm">
-  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-users-group-solid.svg">Download SVG<span class="rvt-sr-only">, users group solid icon</span></a>
-  <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, users group solid icon</span></button>
-    <span class="docs-copy__alert" data-copy-alert role="alert"></span>
-  </span>
-</div>
+
 
 
 
 <div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon source</h2>
+  <div class="rvt-button-group rvt-m-top-sm">
+    <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-users-group-solid.svg">Download SVG<span class="rvt-sr-only">, users group solid icon</span></a>
+    <span class="docs-copy">
+      <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, users group solid icon</span></button>
+      <span class="docs-copy__alert" data-copy-alert role="alert"></span>
+    </span>
+  </div>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+  <g fill="currentColor">
+    <circle cx="12" cy="2" r="2"/>
+    <circle cx="4" cy="2" r="2"/>
+    <circle cx="8" cy="5" r="2"/>
+    <path d="M11,16H5a1,1,0,0,1-1-1V12A4,4,0,0,1,8,8H8a4,4,0,0,1,4,4v3A1,1,0,0,1,11,16Z"/>
+    <path d="M4.5,5a3.44,3.44,0,0,0-2.41.55A4.65,4.65,0,0,0,0,9.53V12a1,1,0,0,0,1,1H2.5V12A5.49,5.49,0,0,1,5.31,7.21,3.47,3.47,0,0,1,4.5,5Z"/>
+    <path d="M11.5,5a3.44,3.44,0,0,1,2.41.55A4.65,4.65,0,0,1,16,9.53V12a1,1,0,0,1-1,1H13.5V12a5.49,5.49,0,0,0-2.81-4.79A3.47,3.47,0,0,0,11.5,5Z"/>
+  </g>
+</svg>
+
+  </div>
+  <pre class="docs-example__code"><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+  &lt;g fill=&quot;currentColor&quot;&gt;
+    &lt;circle cx=&quot;12&quot; cy=&quot;2&quot; r=&quot;2&quot;/&gt;
+    &lt;circle cx=&quot;4&quot; cy=&quot;2&quot; r=&quot;2&quot;/&gt;
+    &lt;circle cx=&quot;8&quot; cy=&quot;5&quot; r=&quot;2&quot;/&gt;
+    &lt;path d=&quot;M11,16H5a1,1,0,0,1-1-1V12A4,4,0,0,1,8,8H8a4,4,0,0,1,4,4v3A1,1,0,0,1,11,16Z&quot;/&gt;
+    &lt;path d=&quot;M4.5,5a3.44,3.44,0,0,0-2.41.55A4.65,4.65,0,0,0,0,9.53V12a1,1,0,0,0,1,1H2.5V12A5.49,5.49,0,0,1,5.31,7.21,3.47,3.47,0,0,1,4.5,5Z&quot;/&gt;
+    &lt;path d=&quot;M11.5,5a3.44,3.44,0,0,1,2.41.55A4.65,4.65,0,0,1,16,9.53V12a1,1,0,0,1-1,1H13.5V12a5.49,5.49,0,0,0-2.81-4.79A3.47,3.47,0,0,0,11.5,5Z&quot;/&gt;
+  &lt;/g&gt;
+&lt;/svg&gt;
+</code></pre>
+</div>
+
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <rvt-icon name="users-group-solid"></rvt-icon>
@@ -64,6 +96,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--plain">
@@ -79,6 +113,8 @@
 
   
 <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+
+  
 <div class="docs-example">
   <div class="docs-example__preview">
     <button class="rvt-button rvt-button--secondary">
